Configuration for Auto, Shown, Hidden

This is the last big piece that was missing from the systray,
now possible to set an entry as always shown, always hidden, or auto (default)
BUG:332505